excluded some dependencies since robotcore already includes them